// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Site: Select Basic Usage 1`] = `
Object {
  "docs": "Select different items from a list.",
  "html": "<div style=\\"position: relative\\">
  <select class=\\"drac-select drac-select-white\\">
    <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
    <option>Blade</option>
    <option>Buffy</option>
    <option>Lincoln</option>
    <option>Morbius</option>
    <option>Van Helsing</option>
  </select>
  <div class=\\"drac-select-arrow drac-text-white\\">
    <svg
      viewBox=\\"0 0 24 24\\"
      focusable=\\"false\\"
      role=\\"presentation\\"
      aria-hidden=\\"true\\"
    >
      <path
        fill=\\"currentColor\\"
        d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
      ></path>
    </svg>
  </div>
</div>
",
  "react": "<Select defaultValue=\\"default\\" color=\\"white\\">
  <option value=\\"default\\" disabled={true}>
    Select option
  </option>
  <option>Blade</option>
  <option>Buffy</option>
  <option>Lincoln</option>
  <option>Morbius</option>
  <option>Van Helsing</option>
</Select>;
",
  "title": "Usage",
}
`;

exports[`Site: Select Colors 1`] = `
Object {
  "docs": "Select can be customized to use any of the Dracula UI theme colors.",
  "html": "<div style=\\"display: flex; flex-direction: column\\">
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select class=\\"drac-select drac-select-outline drac-select-white\\">
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-white\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select class=\\"drac-select drac-select-outline drac-select-cyan\\">
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-cyan\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select class=\\"drac-select drac-select-outline drac-select-green\\">
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-green\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select class=\\"drac-select drac-select-outline drac-select-orange\\">
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-orange\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select class=\\"drac-select drac-select-outline drac-select-pink\\">
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-pink\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select class=\\"drac-select drac-select-outline drac-select-purple\\">
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-purple\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select class=\\"drac-select drac-select-outline drac-select-red\\">
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-red\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select class=\\"drac-select drac-select-outline drac-select-yellow\\">
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-yellow\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select class=\\"drac-select drac-select-white\\">
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-white\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select class=\\"drac-select drac-select-cyan\\">
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-cyan\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select class=\\"drac-select drac-select-green\\">
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-green\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select class=\\"drac-select drac-select-orange\\">
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-orange\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select class=\\"drac-select drac-select-pink\\">
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-pink\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select class=\\"drac-select drac-select-purple\\">
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-purple\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select class=\\"drac-select drac-select-red\\">
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-red\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select class=\\"drac-select drac-select-yellow\\">
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-yellow\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
</div>
",
  "react": "<div style={{ display: \\"flex\\", flexDirection: \\"column\\" }}>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" variant=\\"outline\\" color=\\"white\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" variant=\\"outline\\" color=\\"cyan\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" variant=\\"outline\\" color=\\"green\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" variant=\\"outline\\" color=\\"orange\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" variant=\\"outline\\" color=\\"pink\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" variant=\\"outline\\" color=\\"purple\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" variant=\\"outline\\" color=\\"red\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" variant=\\"outline\\" color=\\"yellow\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" variant=\\"normal\\" color=\\"white\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" variant=\\"normal\\" color=\\"cyan\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" variant=\\"normal\\" color=\\"green\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" variant=\\"normal\\" color=\\"orange\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" variant=\\"normal\\" color=\\"pink\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" variant=\\"normal\\" color=\\"purple\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" variant=\\"normal\\" color=\\"red\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" variant=\\"normal\\" color=\\"yellow\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
</div>;
",
  "title": "Colors",
}
`;

exports[`Site: Select Disabled 1`] = `
Object {
  "docs": "A disabled select is unusable and un-clickable.",
  "html": "<div style=\\"display: flex; flex-direction: column\\">
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select class=\\"drac-select drac-select-white\\">
        <option value=\\"default\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-white\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select class=\\"drac-select drac-select-outline drac-select-white\\">
        <option value=\\"default\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-white\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
</div>
",
  "react": "<div style={{ display: \\"flex\\", flexDirection: \\"column\\" }}>
  <div style={{ marginBottom: 10 }}>
    <Select disabled={true} variant=\\"normal\\" color=\\"white\\">
      <option value=\\"default\\">Select option</option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Select disabled={true} variant=\\"outline\\" color=\\"white\\">
      <option value=\\"default\\">Select option</option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
</div>;
",
  "title": "Disabled",
}
`;

exports[`Site: Select Sizes 1`] = `
Object {
  "docs": "Select can be customize to use several different sizes.",
  "html": "<div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select class=\\"drac-select drac-select-lg drac-select-white\\">
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-white\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select class=\\"drac-select drac-select-white\\">
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-white\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select class=\\"drac-select drac-select-sm drac-select-white\\">
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-white\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
</div>
",
  "react": "<div>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" size=\\"large\\" color=\\"white\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" size=\\"medium\\" color=\\"white\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" size=\\"small\\" color=\\"white\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
</div>;
",
  "title": "Sizes",
}
`;

exports[`Site: Select Variants 1`] = `
Object {
  "docs": "There are two different variations you can use: \`normal\` and \`outline\`",
  "html": "<div style=\\"display: flex; flex-direction: column\\">
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select class=\\"drac-select drac-select-white\\">
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-white\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <div style=\\"position: relative\\">
      <select class=\\"drac-select drac-select-outline drac-select-white\\">
        <option value=\\"default\\" disabled=\\"\\" selected=\\"\\">Select option</option>
        <option>Blade</option>
        <option>Buffy</option>
        <option>Lincoln</option>
        <option>Morbius</option>
        <option>Van Helsing</option>
      </select>
      <div class=\\"drac-select-arrow drac-text-white\\">
        <svg
          viewBox=\\"0 0 24 24\\"
          focusable=\\"false\\"
          role=\\"presentation\\"
          aria-hidden=\\"true\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\"
          ></path>
        </svg>
      </div>
    </div>
  </div>
</div>
",
  "react": "<div style={{ display: \\"flex\\", flexDirection: \\"column\\" }}>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" variant=\\"normal\\" color=\\"white\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Select defaultValue=\\"default\\" variant=\\"outline\\" color=\\"white\\">
      <option value=\\"default\\" disabled={true}>
        Select option
      </option>
      <option>Blade</option>
      <option>Buffy</option>
      <option>Lincoln</option>
      <option>Morbius</option>
      <option>Van Helsing</option>
    </Select>
  </div>
</div>;
",
  "title": "Variants",
}
`;
